# Proyecto-X

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  AUDIT_REQUEST.md  README.md  REPLIT_SETUP.md  pyproject.toml  replit.md  reporte_continuidad.md  sistema de recordatorios.md
attached_assets/: Pasted-Contexto-Estoy-creando-una-aplicaci-n-web-que-sirve-com_1769045659423.txt
backend/: requirements.txt  run.py
backend/app/: auth.py  database.py  main.py
backend/app/models/: __init__.py  activity.py  ai_history.py  reminder.py  user.py
backend/app/routes/: agenda.py  reminders.py  summary.py  telegram.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: reminder_intelligence.py
backend/migrations/: add_supabase_user_id.sql  init_database.sql
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agenda/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: BottomNav.tsx  Footer.tsx  Navbar.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Tabs.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: supabase.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css  theme.css
